require Java 11